cmake_minimum_required(VERSION 3.23)
project(cpp_dsa C)
set(CMAKE_CXX_STANDARD 20)

option(TESTING "Run unit tests" 0)
if (${TESTING})
    include(CTest)
    file(GLOB_RECURSE test_files CONFIGURE_DEPENDS "**/tests/*.cpp")
    foreach (test_file_path ${test_files})
        file(STRINGS ${test_file_path} first_line LIMIT_COUNT 1)
        string(REGEX MATCH "(\\^.*)$" test_regex ${first_line})
        string(REGEX MATCH "([a-zA-Z1-9_-]+)\\/[a-zA-Z1-9_-]+\\/([a-zA-Z1-9_-]+)\\.c$" test_data "${test_file_path}")
        set(lib_name ${CMAKE_MATCH_1})
        set(test_name ${CMAKE_MATCH_2})
        set(test_binary_name "${lib_name}_${test_name}")
        add_executable("${test_binary_name}" "${test_file_path}")
        set_target_properties("${test_binary_name}" PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/Testing")
        target_link_libraries("${test_binary_name}" ${lib_name})
        add_test(NAME "${test_binary_name}" COMMAND "${test_binary_name}")
        set_property(TEST "${test_binary_name}" PROPERTY PASS_REGULAR_EXPRESSION passRegex "${test_regex}")
    endforeach ()
endif ()